--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ footer {
     margin-top: 200px;
 }
 
-.form-group.required .control-label:after{
+.form-group.required .control-label:after {
     color: red;
     content: '*';
 }
@@ -32,7 +32,7 @@ footer {
 
 .submitButton {
     margin: 2% 0%;
-    padding: 2%;
+    padding: 5px;
     width: 100%;
     text-align: center;
 }
